--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ h1
     color:green;
 }
 
-body
+article
 {
     background-color: teal;
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/1a/Donkey_in_Clovelly%2C_North_Devon%2C_England.jpg)
