--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ article
 {
     background-color: teal;
     background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/1a/Donkey_in_Clovelly%2C_North_Devon%2C_England.jpg)
-    font-family:impact;
+    font-family: Times New Roman;
 }
 
 .blur
