changes color background color

--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ article
     width: 500;
     height: 500;
     backdrop-filter: blur(5px);
-    background-color: blueviolet;
+    background-color: white;
 }
 
 div p
