--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ article
      background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/1a/Donkey_in_Clovelly%2C_North_Devon%2C_England.jpg);
     width: 500;
     height: 500;
-    background-color: teal;
+    color: teal;
     font-family: Times New Roman;
 }
 
