--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@ h1
 
 article
 {
+    background-position: center;
+    background-repeat: repeat;
      background-image: url(https://upload.wikimedia.org/wikipedia/commons/1/1a/Donkey_in_Clovelly%2C_North_Devon%2C_England.jpg);
     width: 500;
     height: 500;
