--- a/style.css
+++ b/style.css
@@ -29,3 +29,10 @@ a:hover
 {
     color:black;
 }
+
+.container
+{display: flex;
+flex-direction:row;
+justify-content:center;
+align-items: center;
+}
