--- a/style.css
+++ b/style.css
@@ -37,3 +37,11 @@ justify-content:center;
 align-items: center;
 }
 
+.item
+{
+    flex: 1;
+    align-self: center;
+    background-color: beige;
+    color:aquamarine;
+
+}
